[package]
name = "day-7"
edition.workspace = true
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex.workspace = true
itertools.workspace = true
